splitted server
