# main.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"context"
-	"encoding/json"
 
 	// "crypto/tls"
 	"database/sql"
@@ -19,15 +18,14 @@ import (
 	"github.com/rakyll/statik/fs"
 	"golang.org/x/sync/errgroup"
 
-	// "peerbill-server/api"
-	"peerbill-server/api"
-	db "peerbill-server/db/sqlc"
-	_ "peerbill-server/doc/statik"
-	"peerbill-server/gapi"
-	"peerbill-server/mail"
-	"peerbill-server/pb"
-	"peerbill-server/utils"
-	"peerbill-server/worker"
+	db "peerbill-trader-api/db/sqlc"
+	_ "peerbill-trader-api/doc/statik"
+	"peerbill-trader-api/gapi"
+	"peerbill-trader-api/mail"
+	"peerbill-trader-api/pb"
+	"peerbill-trader-api/socket"
+	"peerbill-trader-api/utils"
+	"peerbill-trader-api/worker"
 
 	"github.com/golang-migrate/migrate/v4"
 	_ "github.com/golang-migrate/migrate/v4/database/postgres"
@@ -36,13 +34,24 @@ import (
 	"github.com/rs/cors"
 	"google.golang.org/grpc"
 
-	// "google.golang.org/grpc/credentials"
-	"google.golang.org/grpc/credentials/insecure"
 	"google.golang.org/grpc/reflection"
 	"google.golang.org/protobuf/encoding/protojson"
 )
 
+/*
+*
+signals to look out for a graceful shutdown
+*/
 var signals = []os.Signal{os.Interrupt, syscall.SIGTERM, syscall.SIGINT}
+
+/*
+*
+set up websocket upgrader
+used to upgrade http conn
+to websocket. the Upgrade method
+will accept rw,r and return a websocket
+connection | err
+*/
 var upgrader = websocket.Upgrader{
 	CheckOrigin: func(r *http.Request) bool {
 		return true
@@ -50,102 +59,12 @@ var upgrader = websocket.Upgrader{
 }
 
 // WebSocket handler function
-func handleWebSocketConnection(config utils.Config, w http.ResponseWriter, r *http.Request) {
-	// Upgrade HTTP connection to WebSocket
-	conn, err := upgrader.Upgrade(w, r, nil)
-	if err != nil {
-		log.Println("Failed to upgrade connection:", err)
-		return
-	}
-	defer conn.Close()
-
-	// Connect to gRPC server securely (with TLS)
-	grpcConn, err := grpc.NewClient(config.GRPCServerAddr, grpc.WithTransportCredentials(insecure.NewCredentials()))
-	if err != nil {
-		log.Println("Failed to connect to gRPC server:", err)
-		return
-	}
-	defer grpcConn.Close()
-	client := pb.NewPeerbillClient(grpcConn)
-
-	// Start the bidirectional stream using SubscribeRate
-	stream, err := client.SubscribeRate(r.Context())
-	if err != nil {
-		log.Println("Error starting SubscribeRate stream:", err)
-		return
-	}
-
-	// Goroutine for reading gRPC responses and sending them to the WebSocket
-	go func() {
-		for {
-			resp, err := stream.Recv() // Receive from the gRPC stream
-			if err != nil {
-				log.Println("Error receiving from gRPC stream:", err)
-				break
-			}
-
-			// Marshal the message to JSON
-			data, err := json.Marshal(resp)
-			if err != nil {
-				log.Println("Error marshaling response to JSON:", err)
-				break
-			}
-
-			// Send the response back to the WebSocket client
-			err = conn.WriteMessage(websocket.TextMessage, data) // Send the marshaled JSON response
-			if err != nil {
-				log.Println("Error writing to WebSocket:", err)
-				break
-			}
-		}
-	}()
-
-	// Continuously read messages from the WebSocket
-	for {
-		// Read a message from the WebSocket client
-		_, msg, err := conn.ReadMessage()
-		if err != nil {
-			log.Println("Error reading from WebSocket:", err)
-			break
-		}
-
-		// Use an anonymous struct to unmarshal the message
-		var message struct {
-			Fiat   string `json:"fiat"`
-			Crypto string `json:"crypto"`
-		}
-
-		// Unmarshal the JSON byte slice into the anonymous struct
-		err = json.Unmarshal(msg, &message)
-		if err != nil {
-			log.Println("Error unmarshaling JSON:", err)
-			continue
-		}
-
-		// Send the WebSocket message as a SubscribeRateRequest to the gRPC server
-		err = stream.Send(&pb.SubscribeRateRequest{
-			Crypto: message.Crypto,
-			Fiat:   message.Fiat,
-		})
-		if err != nil {
-			log.Println("Error sending message to gRPC server:", err)
-			continue
-		}
-	}
-
-	// When the WebSocket connection is closed, cancel the gRPC stream
-	conn.SetCloseHandler(func(code int, text string) error {
-		log.Println("WebSocket connection closed. Cancelling gRPC stream.")
-		stream.CloseSend() // Close the gRPC stream
-		return nil
-	})
-}
 
 func runWebSocketServer(group *errgroup.Group, ctx context.Context, config utils.Config) {
 	// Define WebSocket handler route
 	httpMux := http.NewServeMux()
 	httpMux.HandleFunc("/ws", func(w http.ResponseWriter, r *http.Request) {
-		handleWebSocketConnection(config, w, r)
+		socket.HandleWebSocketConnection(upgrader, config, w, r)
 	})
 
 	// Set up your HTTP server
@@ -246,7 +165,7 @@ func runGatewayServer(group *errgroup.Group, ctx context.Context, config utils.C
 	})
 
 	grpcMux := runtime.NewServeMux(options)
-	err = pb.RegisterPeerbillHandlerServer(ctx, grpcMux, server)
+	err = pb.RegisterPeerbillTraderHandlerServer(ctx, grpcMux, server)
 	if err != nil {
 		log.Fatal(err)
 	}
@@ -339,7 +258,7 @@ func runGrpcServer(group *errgroup.Group, ctx context.Context, config utils.Conf
 	logger := grpc.UnaryInterceptor(gapi.Logger)
 
 	grpcServer := grpc.NewServer(logger)
-	pb.RegisterPeerbillServer(grpcServer, server)
+	pb.RegisterPeerbillTraderServer(grpcServer, server)
 	reflection.Register(grpcServer)
 
 	listener, err := net.Listen("tcp", config.GRPCServerAddr)
@@ -368,16 +287,4 @@ func runGrpcServer(group *errgroup.Group, ctx context.Context, config utils.Conf
 
 		return nil
 	})
-}
-
-func runGinServer(config utils.Config, repository db.DatabaseContract) {
-	server, err := api.NewServer(config, repository)
-	if err != nil {
-		log.Fatal(err)
-	}
-
-	err = server.StartServer(config.HTTPServerAddr)
-	if err != nil {
-		log.Fatal(err)
-	}
 }
